--- a/App/App/CMakeLists.txt
+++ b/App/App/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to the executable file of this project.
-add_executable (App "App.cpp" "App.h")
+add_executable (App "main.cpp" "main.h" "user_interface.h" "user_interface.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET App PROPERTY CXX_STANDARD 20)
