Starting work on Edit

--- a/App/App/CMakeLists.txt
+++ b/App/App/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to the executable file of this project.
-add_executable (App "main.cpp" "main.h" "user_interface.h" "user_interface.cpp" "Methods/add_person.cpp" "Methods/edit_data.cpp" "Methods/add_person.h" "Methods/edit_data.h" "Methods/manage_interests.cpp" "Methods/manage_interests.h" "Methods/group_people.h" "Methods/group_people.cpp" "Methods/import_export.cpp" "Methods/import_export.h" "Database/database_controller.h" "Database/database_save_logic.cpp" "Database/line_parser.h" "Database/line_parser.cpp" "Database/database_read_logic.cpp")
+add_executable (App "main.cpp" "main.h" "user_interface.h" "user_interface.cpp" "Methods/add_person.cpp" "Methods/edit_tool.cpp" "Methods/add_person.h" "Methods/edit_tool.h" "Methods/manage_interests.cpp" "Methods/manage_interests.h" "Methods/group_people.h" "Methods/group_people.cpp" "Methods/import_export.cpp" "Methods/import_export.h" "Database/database_controller.h" "Database/database_save_logic.cpp" "Database/line_parser.h" "Database/line_parser.cpp" "Database/database_read_logic.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET App PROPERTY CXX_STANDARD 20)
