--- a/App/App/CMakeLists.txt
+++ b/App/App/CMakeLists.txt
@@ -10,8 +10,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Add source to the executable file of this project.
-file(GLOB SOURCES "main.cpp" "user_interface.cpp" "Methods/*.cpp" "Database/*.cpp" "Methods/Edits_Methods/*.cpp")
-file(GLOB HEADERS "*.h" "Methods/*.h" "Database/*.h" "Methods/Edits_Methods/*.h")
+file(GLOB SOURCES "main.cpp" "user_interface.cpp" "Methods/*.cpp" "Database/*.cpp" "Methods/Edits_Methods/*.cpp" "Methods/Display_Methods/*.cpp")
+file(GLOB HEADERS "*.h" "Methods/*.h" "Database/*.h" "Methods/Edits_Methods/*.h" "Methods/Display_Methods/*.h")
 
 add_executable(App ${SOURCES} ${HEADERS})
 
